Added two pages - about and blog

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,11 +10,13 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-		<a href="/">Home</a>
+    <body>
+        <a href="/">Home</a>
 		<a href="/about">About</a>
 		<a href="/blog">Blog</a>
-
-		<h1>My Astro Blog</h1>
-	</body>
+        
+        <h1>Blog</h1>
+      
+        <h2>Recents posts</h2>
+      </body>
 </html>
