--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+const pageTitle = "Astro | Blog";
+
 
 ---
 
@@ -8,14 +10,14 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
     <body>
         <a href="/">Home</a>
 		<a href="/about">About</a>
 		<a href="/blog">Blog</a>
         
-        <h1>Blog</h1>
+        <h1>{pageTitle}</h1>
       
         <h2>Recents posts</h2>
         <ul>
