--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css'
-import Navigation from '../components/Navigation.astro'
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Astro | About Me";
@@ -46,7 +46,7 @@ const textCase = "uppercase";
 
 	</head>
     <body>
-        <Navigation/>
+        <Header/>
 
         <h1>{pageTitle}</h1>
         <p>Here are a few facts about me:</p>
