--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css'
-import Navigation from '../components/Navigation.astro'
+import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Astro | Blog";
@@ -17,7 +17,7 @@ const pageTitle = "Astro | Blog";
 		<title>{pageTitle}</title>
 	</head>
     <body>
-        <Navigation/>
+        <Header/>
         
         <h1>{pageTitle}</h1>
       
