--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,50 @@ html {
     margin: 1rem 0;
     font-size: 2.5rem;
   }
+  
+  /* nav styles */
+  
+  .nav-links {
+    width: 100%;
+    top: 5rem;
+    left: 48px;
+    display: none;
+    margin: 0;
+  }
+  
+  .nav-links a {
+    display: block;
+    text-align: center;
+    padding: 4px 10px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: all .4s ease-in-out;
+    border-bottom: 2px solid transparent;
+  }
+  
+  .nav-links a:hover,
+  .nav-links a:focus {
+    border-color: purple;
+  }
+  
+  .expanded {
+    display: unset;
+  }
+  
+  @media screen and (min-width: 636px) {
+    .nav-links {
+      margin-left: 5em;
+      display: block;
+      position: static;
+      width: auto;
+      background: none;
+    }
+  
+    .nav-links a {
+      display: inline-block;
+      padding: 8px 20px;
+    }
+  
+  }
