--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -29,5 +29,8 @@ const pageTitle = "Astro | Blog";
         </ul>
 
         <Footer/>
+        <script>
+			import "../scripts/menu.js"
+		</script>
       </body>
 </html>
