--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,8 +20,20 @@ html {
     font-size: 2.5rem;
   }
   
-  /* nav styles */
+ /* nav styles */
+ .hamburger {
+    padding-right: 20px;
+    cursor: pointer;
+  }
   
+  .hamburger .line {
+    display: block;
+    width: 40px;
+    height: 3px;
+    margin-bottom: 8px;
+    background-color: #000000;
+  }
+
   .nav-links {
     width: 100%;
     top: 5rem;
@@ -65,4 +77,7 @@ html {
       padding: 8px 20px;
     }
   
+    .hamburger {
+        display: none;
+    }
   }
