--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,15 +1,17 @@
 ---
+import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
-<h1>{frontmatter.title}</h1>
-<p>{frontmatter.description}</p>
-<img src={frontmatter.image.url} alt={frontmatter.image.alt}/>
-<p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
-<p>Written by {frontmatter.author}</p>
-<hr>
-<ul class="tags">
-    {frontmatter.tags.map((tag: string) => <li class="tag">{tag}</li>)}
+<BaseLayout pageTitle={frontmatter.title}>
+    <p>{frontmatter.description}</p>
+    <img width="680" height="340" src={frontmatter.image.url} alt={frontmatter.image.alt}/>
+    <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
+    <p>Written by {frontmatter.author}</p>
+    <hr>
+    <ul class="tags">
+        {frontmatter.tags.map((tag: string) => <li class="tag">{tag}</li>)}
 
-</ul>
-<h1>{frontmatter.title}</h1>
-<slot />
+    </ul>
+    <h1>{frontmatter.title}</h1>
+    <slot />
+</BaseLayout>
