--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,10 +8,31 @@ const { frontmatter } = Astro.props;
     <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
     <p>Written by {frontmatter.author}</p>
     <hr>
-    <ul class="tags">
-        {frontmatter.tags.map((tag: string) => <li class="tag">{tag}</li>)}
-
-    </ul>
+    <div class="tags">
+        {frontmatter.tags.map((tag :string) => (
+          <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+        ))}
+    </div>
     <h1>{frontmatter.title}</h1>
     <slot />
 </BaseLayout>
+
+<style>
+a {
+  color: #00539F;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tag {
+  margin: 0.25em;
+  border: dotted 1px #a1a1a1;
+  border-radius: .5em;
+  padding: .5em 1em;
+  font-size: 1.15em;
+  background-color: #F8FCFD;
+}
+</style>
