--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ const identity = {
 const skills = ["HTML", "CSS", "SCSS", "JavaScript", "React", "Astro", "Wordpress"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "navy";
