--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,7 +5,7 @@ const { frontmatter } = Astro.props;
 <BaseLayout pageTitle={frontmatter.title}>
     <p>{frontmatter.description}</p>
     <img width="680" height="340" src={frontmatter.image.url} alt={frontmatter.image.alt}/>
-    <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
+    <p>Published on: {frontmatter.pubDate.toLocaleDateString()}</p>
     <p>Written by {frontmatter.author}</p>
     <hr>
     <div class="tags">
