--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,4 +1,5 @@
 ---
+import { getCollection } from 'astro:content';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import BlogPost from '../../components/BlogPost.astro';
 
@@ -6,7 +7,7 @@ import BlogPost from '../../components/BlogPost.astro';
 // getStaticPaths() - A function that returns an array of page routes.
 // {params: ...} in getStaticPaths() - A value that defines the name of a page route generated dynamically.
 export async function getStaticPaths() {
-    const allPosts = Object.values(import.meta.glob('../posts/*.md', { eager: true }));
+    const allPosts = await getCollection("blog");
 
     // OPTION A 
     // this is a solution to have statically declared tags; all are written here below. 
@@ -24,10 +25,10 @@ export async function getStaticPaths() {
     It goes through each Markdown post, one by one, and combines each array of tags into one single larger array. 
     Then, it makes a new Set from all the individual tags it found (to ignore repeated values). Finally, it turns 
     that set into an array (with no duplications), that you can use to show a list of tags on your page. */
-    const uniqueTags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+    const uniqueTags = [...new Set(allPosts.map((post: any) => post.data.tags).flat())];
 
     return uniqueTags.map((tag) => {
-        const filteredPosts = allPosts.filter((post: any) => post.frontmatter.tags.includes(tag));
+        const filteredPosts = allPosts.filter((post: any) => post.data.tags.includes(tag));
         return {
             params: { tag },
             props: { posts: filteredPosts },
@@ -52,7 +53,6 @@ const { posts } = Astro.props;
         <li><BlogPost url={singePost.url} title={singePost.frontmatter.title}/></li>
     ))}
     */}
-    {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
-
+    { posts.map((post) => <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />) }
   </ul>
 </BaseLayout>
